refactor: ajustar servicio para consulta de secciones
