# src/repositories/teacher/dto/get-teachers.dto.ts
@@ -1,0 +1,17 @@
+import { Type } from 'class-transformer';
+import { IsOptional } from 'class-validator';
+
+import { ApiPropertyOptional } from '@nestjs/swagger';
+
+export class GetTeachersDto {
+  @ApiPropertyOptional()
+  @IsOptional()
+  @Type(() => Number)
+  schoolId?: number;
+
+  @ApiPropertyOptional()
+  @IsOptional()
+  @Type(() => Number)
+  departmentId?: number;
+}
+
